--- a/sm2/js/app.html
+++ b/sm2/js/app.html
@@ -28,7 +28,7 @@
     }
 
     .primary {
-      background-color: rgb(85, 85, 255);
+      background-color: #1f5fe5ff;
     }
 
     .modal {
@@ -79,9 +79,15 @@
     }
 
     header {
-      background-color: #4d4d4d;
+      background-color: #364e59ff;
       color: white;
       padding: 1em;
+
+      display: flex;
+      gap: 50px;
+      align-items: center;
+      /*justify-content: center;*/
+
       /*text-align: center;*/
     }
 
@@ -92,7 +98,7 @@
     }
 
     footer {
-      background-color: #4d4d4d;
+      background-color: #364e59ff;
       color: white;
       text-align: center;
       padding: 1em;
@@ -168,14 +174,16 @@
   <div id="example-1-output"></div>
   -->
   <header>
-    <img width="300px" src="/static/hydro_banner.svg">
+    <img style="display:inline-block;" width="300px" src="/static/hydro_banner.svg">
     <!--<img width="300px" src="/static/stablab_tool_explanation.svg">-->
-    <div id="status-message"></div>
-    <div style="margin-top: 20px;">
-      <button style="background-color: #2b519aff;" onclick="showKetcher()">draw API</button>
-    </div>
+    <!--<div style="margin-top: 20px;">-->
+    <button style=" display:inline-block; background-color: #1f5fe5ff;" onclick="showKetcher()">draw API</button>
+    <div style="display:inline-block;"> | </div>
+    <button style=" display:inline-block; background-color: #4c6f7fff;" onclick="showKetcher()">solvents</button>
+    <!--</div>-->
   </header>
   <main>
+    <div style="display:inline-block;" id="status-message"></div>
     <div id="main-content" class="grid-container">
       <!--<h1 class="label">Hydrolytic Stability</h1>-->
       <!--<div style="max-height: 50vh; overflow: scroll;">-->
