better initial solvent sets

--- a/sm2/js/app.html
+++ b/sm2/js/app.html
@@ -167,8 +167,7 @@
     <div id="main-content" class="grid-container">
       <!--<h1 class="label">Hydrolytic Stability</h1>-->
       <!--<div style="max-height: 50vh; overflow: scroll;">-->
-      <script>
-      </script>
+      <script src="/static/default_solvent_settings.js"></script>
       <script src="/static/solvent_dialog.js"></script>
       <div class="ketchermodal" id="ketcherModal">
         <iframe id="ifKetcher" src="/static/ketcher/index.html" width="600px" height="600px"></iframe>
