--- a/sm2/js/app.html
+++ b/sm2/js/app.html
@@ -12,7 +12,11 @@
 <body>
   <header>
     <img style="display:inline-block;" width="300px" src="/static/hydro_banner.svg">
-    <button style=" display:inline-block;" class="secondary" onclick="showKetcher()">draw API</button>
+    <button style=" display:inline-block;" class="secondary" onclick="showKetcher()">
+      <div id="current-api">
+        draw API
+      </div>
+    </button>
     <button style=" display:inline-block;" class="secondary" onclick="showSolventsDialog()">solvents</button>
     <div style="display:inline-block;"> | </div>
     <button style=" display:inline-block;" class="primary" onclick="runRanking()">run</button>
