--- a/sm2/js/app.html
+++ b/sm2/js/app.html
@@ -19,7 +19,8 @@
     </button>
     <button style=" display:inline-block;" class="secondary" onclick="showSolventsDialog()">solvents</button>
     <div style="display:inline-block;"> | </div>
-    <button style=" display:inline-block;" class="primary" onclick="runRanking()">run</button>
+    <button style=" display:inline-block;" class="primary" onclick="runRanking()">rank</button>
+    <button style=" display:inline-block;" class="primary" onclick="runTCurve()">T curve</button>
   </header>
   <main>
     <div style="display:inline-block;" id="status-message"></div>
