--- a/sm-js/sm.html
+++ b/sm-js/sm.html
@@ -7,18 +7,27 @@
     <script src="https://unpkg.com/@rdkit/rdkit/dist/RDKit_minimal.js"></script>
 
     <script>
+
+        const fSum = function (vec) {
+            var s = 0;
+            vec.forEach(element => {
+                s += element;
+            });
+            return s;
+        }
+
         // How to use tensorflow.js for linear regression:
         const model = tf.sequential();
-        model.add(tf.layers.dense({ units: 1, inputShape: [1] }));
+        model.add(tf.layers.dense({ units: 1, inputShape: [2048] }));
 
         model.compile({ loss: 'meanSquaredError', optimizer: 'sgd' });
 
-        const xs = tf.tensor2d([1, 2, 3, 4], [4, 1]);
-        const ys = tf.tensor2d([1, 3, 5, 7], [4, 1]);
+        //const xs = tf.tensor2d([1, 2, 3, 4], [4, 1]);
+        //const ys = tf.tensor2d([1, 3, 5, 7], [4, 1]);
 
-        model.fit(xs, ys).then(() => {
-            model.predict(tf.tensor2d([5], [1, 1])).print();
-        });
+        //model.fit(xs, ys).then(() => {
+        //model.predict(tf.tensor2d([5], [1, 1])).print();
+        //});
 
         // A simple example that shows how to compute a fingerprint:
         window
@@ -27,21 +36,50 @@
                 console.log("RDKit version: " + RDKit.version());
                 window.RDKit = RDKit;
 
-                const smiles = "CCO";
-                const mol = RDKit.get_mol(smiles);
 
-                const radius = 2;
-                const nBits = 2048;
-                window.mol = mol;
-                const morganFingerprint = mol.get_morgan_fp(
-                    JSON.stringify({ "radius": radius, "nBits": nBits })
+                const smiles_list = [
+                    "C", "CCO", "CCCN", "CCCCOC", "CCCCCCl",
+                ];
+
+
+                var xs = [];
+                var ys = [];
+
+                /* Convert the smiles into Morgan fingerprints */
+                var idx;
+                for (idx = 0; idx < smiles_list.length; idx++) {
+                    const smiles = smiles_list[idx];
+                    const y = smiles.length / 10;
+                    const mol = RDKit.get_mol(smiles);
+                    const radius = 2;
+                    const nBits = 2048;
+                    //window.mol = mol;
+                    const morgan_fp = mol.get_morgan_fp(
+                        JSON.stringify({ "radius": radius, "nBits": nBits })
+                    );
+                    const fp_array = morgan_fp.split("").map(bit => parseInt(bit, 10));
+                    xs.push(fp_array);
+                    ys.push(y);
+                    mol.delete();
+                }
+
+                const xs_tens = tf.tensor2d(xs, [xs.length, 2048,]);
+                const ys_tens = tf.tensor2d(ys, [ys.length, 1,]);
+                //
+                console.log("result:");
+                model.fit(xs_tens, ys_tens,
+                    { epochs: 50, }
+                ).then(() => {
+                    model.predict(tf.tensor2d(xs[3], [1, 2048])).print();
+                }
                 );
-                const fingerprintArray = morganFingerprint.split("").map(bit => parseInt(bit, 10));
 
-                console.log("morgan fp:");
-                console.log(morganFingerprint);
-                window.fp = morganFingerprint;
-                // mol.delete();
+                console.log("result2:" + xs.length);
+                xs.forEach(element => {
+                    console.log(">>>");
+                    console.log(">>" + fSum(element));
+                });
+
             })
             .catch(() => {
                 // handle loading errors here...
